add boilerplate code
- add initialTranscript
- update project architecture

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,5 @@
     "noUnusedParameters": true,
     "noPropertyAccessFromIndexSignature": true
   },
-  "include": ["src"]
+  "include": ["src", "globals.d.ts"]
 }
