--- a/package.json
+++ b/package.json
@@ -4,11 +4,6 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.1.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/node": "^16.18.105",
-    "@types/react": "^18.3.4",
-    "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -40,7 +35,13 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.0",
     "@types/bun": "latest",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^22.5.0",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.20",
     "cssnano": "^7.0.5",
     "postcss": "^8.4.41",
